Inicio do projeto
pagina inicial falta apenas corrigir margem direita.
Dar sequencia nas próximas telas.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/inicio.png" type="image/x-icon">
     <title>Inicio</title>
+    <link rel="stylesheet" href="estilos/styleInicio.css">
 </head>
 <body>
-    
-    
+    <header>
+        <ul class="menu">
+            <li>Início</li>
+            <li>Sobre</li>
+            <li>Formação</li>
+            <li>Portfólio</li>
+            <li>Contato</li>
+        </ul>
+    </header>
+    <nav class="container">
+        <section class="box1">
+            <img src="imagens/proficional200.jpg" alt="" id="fotoCapa">
+        </section>
+        <section class="box2">
+            <p style="color: white;"><strong>Olá, eu sou</strong></p>
+            <h1 style="color: chocolate; font-size: 2.1em;">Murilo Medeiros Ferreira</h1>
+            <p style="color: white;">Desenvolvedor Back-End</p>
+        </section>
+        <section class="box3">
+            <ul>
+                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Email.128.png" alt="GitHub"></li>
+                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Facebook.128.png" alt="GitHub"></li>
+                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Github.128.png" alt="GitHub"></li>
+                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Instagram.128.png" alt="GitHub"></li>
+                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Linkedin.128.png" alt="GitHub"></li>
+                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Whatsapp.128.png" alt="GitHub"></li>
+            </ul>             
+        </section>
+    </nav>
+    <script src="script.js"></script>    
 </body>
 </html>
