--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
             <img src="imagens/proficional200.jpg" alt="" id="fotoCapa">
         </section>
         <section class="box2">
-            <p style="color: white;"><strong>Olá, eu sou</strong></p>
+            <p style="color: white;"><strong>Olá, meu nome é</strong></p>
             <h1 style="color: chocolate; font-size: 2.1em;">Murilo Medeiros Ferreira</h1>
             <p style="color: white;">Desenvolvedor Back-End</p>
         </section>
         <section class="box3">
             <ul>
-                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Email.128.png" alt="GitHub"></li>
-                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Facebook.128.png" alt="GitHub"></li>
-                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Github.128.png" alt="GitHub"></li>
-                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Instagram.128.png" alt="GitHub"></li>
-                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Linkedin.128.png" alt="GitHub"></li>
-                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Whatsapp.128.png" alt="GitHub"></li>
+                <!--<li><a href="mailto:murilo1988.dev@gmail.com"><img src="imagens/Social-Media-Icons-Glossy-Social-Email.128.png" alt="e-mail"></a></li>-->
+                <li><img src="imagens/Social-Media-Icons-Glossy-Social-Facebook.128.png" alt="Facebookj"></li>
+                <li><a href="https://github.com/DevMurilo1988" target="_blank"><img src="imagens/Social-Media-Icons-Glossy-Social-Github.128.png" alt="GitHub"></a></li>
+                <li><a href=""><img src="imagens/Social-Media-Icons-Glossy-Social-Instagram.128.png" alt="Instagram"></a></li>
+                <li><a href="https://www.linkedin.com/in/murilo-medeiros-ferreira-270870296/" target="_blank"><img src="imagens/Social-Media-Icons-Glossy-Social-Linkedin.128.png" alt="linkedin"></a></li>
+                <!--<li><a href="https://web.whatsapp.com/send?phone=5541998192610" target="_blank"><img src="imagens/Social-Media-Icons-Glossy-Social-Whatsapp.128.png" alt="whatsapp"></a></li>-->
             </ul>             
         </section>
     </nav>
