--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <ul class="menu">
-            <li onclick="inicio()">Início</li>
+            <a href="index.html"></a><li>Início</li>
             <li onclick="sobre()">Sobre</li>
             <li onclick="formacao()">Formação</li>
             <li onclick="portfolio()">Portfólio</li>
@@ -47,7 +47,7 @@
             </div>
             <div id="caixasdetexto">
             <h3>Por que Programação ?</h3>
-                <p>Desde cedo, sempre fui apaixonado pela área da tecnologia, sempre tive muita curiosidade e a vontade de entender e saber como as coisas são feitas, mas infelizmente só consegui comprar meu primeiro computador aos 30 anos de idade. Já havia me matriculado na faculdade em 2018, mas por não ter acesso as ferramentas necessárias para dar continuidade aos estudos, tive que trancar minha matrícula. No ano de 2023, minha vida tomou um rumo totalmente diferente e novas oportunidades surgiram, onde mesmo sem conhecer ninguém da área de tecnologia, resolvi me matricular na faculdade de Análise e Desenvolvimento de Sistemas. Confesso que não está sendo fácil, mas estou mais dedicado do que nunca para alcançar esse objetivo de me tornar um desenvolvedor. 
+                <p>Desde cedo, sempre fui apaixonado pela área da tecnologia, sempre tive muita curiosidade e vontade de entender e saber como as coisas são feitas, mas só consegui comprar meu primeiro computador aos 30 anos de idade. Já havia me matriculado na faculdade em 2018, mas por não ter acesso as ferramentas necessárias para dar continuidade aos estudos, tive que trancar minha matrícula. Em 2023, minha vida tomou um rumo totalmente diferente e novas oportunidades surgiram, onde mesmo sem conhecer ninguém da área de tecnologia, resolvi me matricular na faculdade de Análise e Desenvolvimento de Sistemas. Confesso que não está sendo fácil, mas estou mais dedicado do que nunca para alcançar esse objetivo de me tornar um desenvolvedor. 
                 </p>
             </div>
             <div id="caixasdetexto">
