--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 <body>
     <header>
         <ul class="menu">
-            <a href="index.html"></a><li>Início</li>
-            <li onclick="sobre()">Sobre</li>
-            <li onclick="formacao()">Formação</li>
-            <li onclick="portfolio()">Portfólio</li>
-            <li onclick="contato()">Contato</li>
-        </ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="formacao.html">Formação</a></li>
+            <li><a href="portfolio.html">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
     </header>    
     <main class="container">
         <section class="box1">
@@ -35,47 +34,9 @@
                 <li><a href=""><img src="imagens/Social-Media-Icons-Glossy-Social-Instagram.128.png" alt="Instagram"></a></li>
                 <li><a href="https://www.linkedin.com/in/murilo-medeiros-ferreira-270870296/" target="_blank"><img src="imagens/Social-Media-Icons-Glossy-Social-Linkedin.128.png" alt="linkedin"></a></li>
             </ul>
-        </nav>              
-        
-    </main>
-    <h2 style="color: chocolate; text-align: center; padding: 5px;">Sobre</h2>
-    <section class="corpo">
-        <article>
-           <div id="caixasdetexto">
-                <h3>Quem sou ? </h3>
-                <p>Olá meu nome é <strong>Murilo Medeiros Ferreira</strong>, Tenho 35 anos nascido em 11/02/1988. Sou casado e tenho 2 filhos, um menino de 13 anos e uma menina de 9 anos. Atualmente resido em São José dos Pinhais, PR, mas sou natural de Curitiba, PR.</p>
-            </div>
-            <div id="caixasdetexto">
-            <h3>Por que Programação ?</h3>
-                <p>Desde cedo, sempre fui apaixonado pela área da tecnologia, sempre tive muita curiosidade e vontade de entender e saber como as coisas são feitas, mas só consegui comprar meu primeiro computador aos 30 anos de idade. Já havia me matriculado na faculdade em 2018, mas por não ter acesso as ferramentas necessárias para dar continuidade aos estudos, tive que trancar minha matrícula. Em 2023, minha vida tomou um rumo totalmente diferente e novas oportunidades surgiram, onde mesmo sem conhecer ninguém da área de tecnologia, resolvi me matricular na faculdade de Análise e Desenvolvimento de Sistemas. Confesso que não está sendo fácil, mas estou mais dedicado do que nunca para alcançar esse objetivo de me tornar um desenvolvedor. 
-                </p>
-            </div>
-            <div id="caixasdetexto">
-            <h3>Primeiros Contatos com Programação:</h3>
-                <p>Em 2017 comcei a trabalhar em uma das maiores empresas de telefônia do mundo e tive a oportunidade de trabalhar com planilhas, eu não entendia nada, não sabia nem mesmo as formulas básicas, mas pesquisei e estudei atravéz de vídeos do youtube para que quando entrasse na empresa, já soubesse pelo menos o basico. Após um certo tempo, vi que o processo de manipulação deles era muito desgastante por ser repetitivo e complexo, tinha que entrar em varias páginas de sistemas diferentes para coletar dados e poder dar tratativas as demandas. Então, lembrei que quando estavá estudando vi que havia formas de automatizar processos repetitivos com formulas e algumas eram somente possível com VBA, então comecei a fazer pesquisas no YouTube e aos poucos consegui automatizar boa parte das planilhas da área em que trabalhava reduzindo o tempo de atendimento de 7,33 minutos para aproximadamente 4minutos. Não posso dizer que sou expert em Excel, mas tenho conhecimento súficiente do que o Excel é capaz de fazer e tenho um domínio muito avançado de suas ferramentas e um nível razoável em VBA. Por isso, me considero ótimo automatizando planilhas e processos. Desde então, venho me aprimorando e aplicando meus conhecimentos por onde passo. Já fiz alguns projetos importantes, como automatização de controle de estoque, processos gerenciais de chão de fábrica, controle de produção com apontamentos.</p>
-            </div>                
-            <div id="caixasdetexto">
-            <h3>Minhas Caracteristicas Proficionais:</h3>
-            <p>Sempre me destaquei nas empresas em que já trabalhei, pois tenho algumas caracteristicas pessoais que me ajudam a desenvolver um bom trabalho, as quais demorei um certo tempo para identifica-las, mas hoje consigo ver com clareza quais são:</p>
-                <ul>
-                    <li>Autocritica</li>
-                    <li>Proatividade</li>
-                    <li>Criatividade</li>
-                    <li>Relacionamento</li>
-                    <li>Trabalho em Equipe</li>                                     
-                    <li>Sede de conhecimento</li>
-                    <li>Liderança</li>
-                    <li>Foco no Resultado</li>
-                    <li>Empatia</li>
-                    <li>Comunicação</li>                  
-                </ul>
-            </div>
-            <div id="caixasdetexto">
-            <h3>Meus Objetivos:</h3>
-            <p>Estou otimista para continuar essa jornada, inicialmente quero me desenvolver como Back-End e futuramente Full-Stack, vou me especializar nas linguagens <strong>Java Script</strong>  e <strong>Python</strong> porém Tenho muita vontade de Estudar <strong>Java</strong> (mas é como segunda opção de linguagem). Claro que não para por ai, quero me tornar um programador completo e ser referência na área. </p>
-            </div>
-        </article>
-    </section>
+        </nav>            
+    </main>                  
+            
     <footer>
         <p><a href="https://www.linkedin.com/in/murilo-medeiros-ferreira-270870296/" target="_blank">&copy; Murilo Medeiros Ferreira</a></p>
     </footer>
