--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/inicio.png" type="image/x-icon">
-    <title>Inicio</title>
+    <title>Portfólio</title>
     <link rel="stylesheet" href="estilos/styleInicio.css" media="all">
     <link rel="stylesheet" href="estilos/stylecelular.css" media="screen">
     <link rel="stylesheet" href="estilos/styletablet.css" media="screen">
